--- a/bpm.html
+++ b/bpm.html
@@ -19,7 +19,7 @@
     <input type="text" id="bpm1" value="40"><br>
     <label for="">max</label>
     <input type="text" id="bpm2" value="160"><br>
-    <button id="go" class="button">Go!</button><br>
+    <button id="go" class="w3-button">Go!</button><br>
     <label for="" id='result'></label>
 
     <script src="bpm.js"></script>
