--- a/bpm.html
+++ b/bpm.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://y-bears.github.io/music-quokka/assets/css/style.css?v=53149eda9f154897bfa113d60e82d9d31ba96eb1">
     
 </head>
 
