--- a/bpm-sc-ch.html
+++ b/bpm-sc-ch.html
@@ -29,7 +29,7 @@
 
             <h3 class="header" for="">[Scale Generator]</h3>
 
-            <p>major or relative minor<br> Select root notes for major:</p>
+            <p>major or relative minor<br> select root notes for major:</p>
 
         
             <div class="note-row">
@@ -63,7 +63,7 @@
             <h3 class="header" id="name">[Chord Generator]</h3>
             <button id="infoButton">Show Info</button><br>
             <div id="infoText">[%7] &nbsp;&nbsp;&nbsp;seventh chord chance (20)<br> [alt]&nbsp;&nbsp; alternative chord<br>[notes] how many notes to use<br> [add] &nbsp;&nbsp;additional random<br>[inversion] note in bass<br>
-                First chord will always be 1 bar<br>
+                first chord will always be 1 bar<br>
             </div>
             <label for="scaleSelect">Choose a Scale:</label>
             <select id="scaleSelect">
