--- a/rhythm.html
+++ b/rhythm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Rhythm</title>
+    <title>Rhythm Generator</title>
     <style>
        
         .square {
