--- a/only-scale.html
+++ b/only-scale.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Scale and Chords Selector</title>
+    <title>Scale Selector</title>
     <script src="only-scale.js"></script>
     <style>
         /* Centering the main content */
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body onload="initialize()">
-    <h1>Scale and Chords Selector</h1>
+    <h1>Scale Selector</h1>
     
     <!-- Note selection buttons -->
     <div id="noteButtons"></div>
