--- a/ch-in-scale.html
+++ b/ch-in-scale.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Scale Selector</title>
-  <script src="only-scale.js"></script>
+  <script src="ch-in-scale.js"></script>
   <style>
     /* Centering the main content */
     body {
