--- a/ch-in-scale.html
+++ b/ch-in-scale.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Scale Selector</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="ch-in-scale.js"></script>
   <style>
     /* Centering the main content */
@@ -10,6 +11,12 @@
       flex-direction: column;
       align-items: center;
       font-family: Arial, sans-serif;
+    }
+    /* Centering the note buttons */
+    #noteButtons {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 10px; /* Added margin for better spacing */
     }
     /* Style for buttons */
     button {
