--- a/melody.html
+++ b/melody.html
@@ -12,10 +12,10 @@
 
 
 <body>
-    <label for="">[Melody generator v1, nov 2023]</label><br><br>
+    <label for="">[Melody generator v1.1, aug 2024]</label><br><br>
     <label for="">Length</label>
     <input type="number" id='length' step="1" value="8">
-    <input type="checkbox" id="chord" class="note" checked>use chord
+    <input type="checkbox" id="chord" class="note" checked>use chord note
     <br><br>
     <button class="button" id='go'>Go!</button><br><br>
     <label for="" id="firstNote"></label>
