--- a/melody.html
+++ b/melody.html
@@ -14,8 +14,8 @@
 <body>
     <label for="">[Melody generator v1.1, aug 2024]</label><br><br>
     <label for="">Length</label>
-    <input type="number" id='length' step="1" value="8">
-    <input type="checkbox" id="chord" class="note" checked>use chord note
+    <input type="number" id='length' step="1" value="8" style="width: 60px">
+    <input type="checkbox" id="chord" class="note" checked> use chord note
     <br><br>
     <button class="button" id='go'>Go!</button><br><br>
     <label for="" id="firstNote"></label>
