--- a/melody.html
+++ b/melody.html
@@ -6,22 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melody</title>
-    <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="styles-2.css">
 </head>
 
-
 <body>
-    <label for="">[Melody generator v1.1, aug 2024]</label><br><br>
-    <label for="">Length</label>
-    <input type="number" id='length' step="1" value="8" style="width: 60px">
-    <input type="checkbox" id="chord" class="note" checked> use chord note
-    <br><br>
-    <button class="button" id='go'>Go!</button><br><br>
-    <label for="" id="firstNote"></label>
-    <label for="" id="result"></label>
+    <div class="container">
+        <label for="">[Melody generator v1.1, aug 2024]</label><br><br>
+        <label for="">Length</label>
+        <input type="number" id='length' step="1" value="8" style="width: 60px">
+        <input type="checkbox" id="chord" class="note" checked> use chord note
+        <br>
+        <button class="button" id='go'>Go!</button><br>
+        <label for="" id="firstNote"></label>
+        <label for="" id="result"></label>
+    </div>
     <script src="melody.js"></script>
-
 </body>
 
 </html>
