ch in scale fix buttons

--- a/ch-in-scale.html
+++ b/ch-in-scale.html
@@ -49,6 +49,12 @@
       text-decoration: underline;
       /* Highlight border for selected button */
     }
+
+    #minorButton,
+    #majorButton {
+      min-width: 80px;
+      max-width: 40%;
+    }
   </style>
 </head>
 
