--- a/scale-chords.html
+++ b/scale-chords.html
@@ -26,9 +26,10 @@
         <button class="button" id='scalesgo'>Go!</button><br>
         <label class="result1" for="" id="scaleRes"></label><br>
         <script src="scale-gen.js"></script>
+    </div>
 
-        <!-- chords generator -->
-
+    <!-- chords generator -->
+    <div class="container">
         <h3 class="header" id="name">[Chord Generator]</h3>
         <button id="infoButton">Show Info</button><br>
         <div id="infoText" style="font-size: 0.8em; text-align: left;">[light brown] 7th or add chord chance (15)<br>
