--- a/bpm-rhythm-melody.html
+++ b/bpm-rhythm-melody.html
@@ -8,9 +8,7 @@
     <title>Music Generators</title>
     <link rel="stylesheet" href="styles-2.css">
     <style>
-        #num {
-            width: 3em;
-        }
+
     </style>
 </head>
 
@@ -57,7 +55,7 @@
     <div class="container">
         <h3>[Melody generator]</h3>
         <label for="melodyLength">Length</label>
-        <input type="number" id="melodyLength" step="1" value="8" style="width: 60px">
+        <input type="number" id="melodyLength" step="1" value="8">
         <input type="checkbox" id="chord" class="note" checked> use chord note
         <br>
         <button class="button" id="melody-go">Go!</button><br>
