--- a/scale-chords.html
+++ b/scale-chords.html
@@ -65,7 +65,7 @@
         <button class="button no-resize-button" id="randButton">2-8 chords</button>
         <label>or&nbsp;</label>
         <input class="bpm" type='number' id="num" value="4" step="1">
-        <button class="button" id="numButton">Repeat</button><br>
+        <button class="button" id="numButton">Go/Repeat</button><br>
 
         <button class="button" id="rh">Rhythm + Chords (4-6)</button><br><br>
 
