--- a/random-note.html
+++ b/random-note.html
@@ -7,7 +7,19 @@
     <title>Random Scale Note Selector</title>
     <link rel="stylesheet" href="colors.css">
     <style>
+        body {
+            text-align: center;
+            font-family: monospace;
+            font-size: 1.2em;
+        }
 
+        #output {
+            margin-top: 20px;
+            font-family: monospace;
+            font-size: 1.2rem;
+            /* Increased font size */
+            text-align: left;
+        }
     </style>
 </head>
 
