--- a/pages/ch-in-scale.html
+++ b/pages/ch-in-scale.html
@@ -60,8 +60,12 @@
 </head>
 
 <body onload="initialize()">
+  <div id="back">
+    <a href="../index.html">[back]</a>
+  </div>
   <div class="container">
-    <h1>Scale Selector</h1>
+
+    <h3>Scale Selector</h3>
 
     <!-- Note selection buttons -->
     <div id="noteButtons"></div>
