--- a/pages/chorder.html
+++ b/pages/chorder.html
@@ -23,6 +23,9 @@
 </head>
 
 <body>
+    <div id="back">
+        <a href="../index.html">[back]</a>
+    </div>
     <div class="container">
         <h1>Random Chord Type</h1>
 
