--- a/pages/drums.html
+++ b/pages/drums.html
@@ -20,8 +20,12 @@
 </style>
 
 <body>
+    <div id="back">
+        <a href="../index.html">[back]</a>
+    </div>
     <div class="container">
-        <H3>[Drums generator]</h3><br>
+        <H3>[Drums generator]</h3>
+        <label id="">(hh, sn, kick)</label><br>
         <label for="kick_btn" id="">Steps: </label>
         <input type="radio" id="value8" name="drumSteps" value="8" checked> 8
         <input type="radio" id="value16" name="drumSteps" value="16"> 16<br><br>
