--- a/pages/random-note.html
+++ b/pages/random-note.html
@@ -13,6 +13,14 @@
             font-size: 1.2em;
         }
 
+        #back {
+            width: 100%;
+            box-sizing: border-box;
+            padding-top: 20px;
+            padding-left: 20px;
+            text-align: left;
+        }
+
         #output {
             margin-top: 20px;
             font-family: monospace;
@@ -24,6 +32,9 @@
 </head>
 
 <body>
+    <div id="back">
+        <a href="../index.html">[back]</a>
+    </div>
     <h1>Random Scale Note Selector</h1>
 
     <label for="scaleSelector">Scale:</label>
