--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <div class="main">
         <div class="container"><img src="./assets/img/logo.png" alt="logo" height="200"></div>
 
-        <h2>Music generators</h2>
+        <div class="container">
+            <h2>Music generators</h2>
+        </div>
         <div id="list">
             <ul>
                 <li><a href="./pages/bpm-rhythm-melody.html">Bpm, Rhythm and Melody</a></li>
