--- a/pages/random-note.html
+++ b/pages/random-note.html
@@ -35,7 +35,7 @@
     <div id="back">
         <a href="../index.html">[back]</a>
     </div>
-    <h1>Random Scale Note Selector</h1>
+    <h1>Random Note</h1>
 
     <label for="scaleSelector">Scale:</label>
     <select id="scaleSelector">
