remake of graphical rhythm
replaced

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="./pages/scale-chords.html">Scale and Chords Generators</a></li>
                 <li><a href="./pages/ch-in-scale.html">Chords in Scales</a></li>
                 <li><a href="./pages/arp.html">Arpeggio Generator</a></li>
-                <li><a href="./pages/rhythm-boxes.html">Rhythm Generator (Graphic)</a></li>
+                <li><a href="./pages/rhythm-visual.html">Rhythm Generator (Graphic)</a></li>
                 <li><a href="./pages/drums.html">Drums Generator</a></li>
                 <li><a href="./pages/chorder.html">Chord Type</a></li>
                 <li><a href="./pages/random-note.html">Notes</a></li>
