removed rh-numbers, added theme to rhythm-visual

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div id="list">
             <ul>
-                <li><a href="./pages/bpm-rhythm-melody.html">Bpm, Rhythm and Melody</a></li>
+                <li><a href="./pages/bpm-melody.html">Bpm, Melody</a></li>
                 <li><a href="./pages/scale-chords.html">Scale and Chords Generators</a></li>
                 <li><a href="./pages/ch-in-scale.html">Chords in Scales</a></li>
                 <li><a href="./pages/arp.html">Arpeggio Generator</a></li>
